# replicodekateplugin

./: CMakeLists.txt  config.ui  katereplicodeplugin.desktop  ktexteditor_replicode.desktop  replicodeconfig.cpp  replicodeconfig.h  replicodeconfigpage.cpp  replicodeconfigpage.h  replicodeplugin.cpp  replicodeplugin.h  replicodesettings.cpp  replicodesettings.h  replicodeui.rc  replicodeview.cpp  replicodeview.h  ui.rc
